News UAT/force-app/main/default/objects/Publication_Product__c/Publication_Product__c.object-meta.xml
<CustomObject>
    <description>Publication to Salesforce Product mapping</description>
    <label>Publication Product</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Publication Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>