News UAT/force-app/main/default/objects/Publication_Product__c/fields/Ad_Type__c.field-meta.xml
<CustomField>
    <fullName>Ad_Type__c</fullName>
    <label>Ad Type</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>