News UAT/force-app/main/default/objects/Publication_Product__c/fields/Booking_System__c.field-meta.xml
<CustomField>
    <fullName>Booking_System__c</fullName>
    <label>Booking System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AdPoint</fullName>
            </value>
            <value>
                <fullName>Cyber$ell</fullName>
            </value>
            <value>
                <fullName>CyberAd</fullName>
            </value>
            <value>
                <fullName>OSCA</fullName>
            </value>
            <value>
                <fullName>NewsAdds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>