News UAT/force-app/main/default/objects/Publication_Product__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>Product__r.CyberAd_Division__c</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>