News UAT/force-app/main/default/objects/Publication_Product__c/fields/Genesis_Cyberad_Publication_Code__c.field-meta.xml
<CustomField>
    <fullName>Genesis_Cyberad_Publication_Code__c</fullName>
    <label>Genesis/Cyberad Publication Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>