News UAT/force-app/main/default/objects/Publication_Product__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <label>Publication Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>