News UAT/force-app/main/default/objects/Publication_Product__c/fields/Publication_AdType__c.field-meta.xml
<CustomField>
    <fullName>Publication_AdType__c</fullName>
    <formula>Publication_Code__c + &#39;&amp;&#39; + Ad_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication Code And AdType</label>
    <type>Text</type>
</CustomField>