News UAT/force-app/main/default/objects/Publication_Product__c/fields/Publication_Code__c.field-meta.xml
<CustomField>
    <fullName>Publication_Code__c</fullName>
    <label>Publication Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>