News UAT/force-app/main/default/objects/Publication_Product__c/fields/Show_In_Booking_Confirmation_Pub_Screen__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Booking_Confirmation_Pub_Screen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show In Booking Confirmation Pub Screen</label>
    <type>Checkbox</type>
</CustomField>