News UAT/force-app/main/default/objects/Publication_Product__c/listViews/All_Publication_Products.listView-meta.xml
<ListView>
    <fullName>All_Publication_Products</fullName>
    <columns>NAME</columns>
    <columns>Publication_Code__c</columns>
    <columns>Publication__c</columns>
    <columns>Ad_Type__c</columns>
    <columns>Booking_System__c</columns>
    <columns>External_Id__c</columns>
    <columns>Product__c</columns>
    <columns>Division__c</columns>
    <columns>Active__c</columns>
    <columns>Publication_AdType__c</columns>
    <columns>Show_In_Booking_Confirmation_Pub_Screen__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Publication Products</label>
</ListView>